# lightbig

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml
src/: Makefile  lightbig.c  lightbig.h  test_lightbig.c
